--- a/home/templates/home/computer_wizard_form.html
+++ b/home/templates/home/computer_wizard_form.html
@@ -1,8 +1,9 @@
 {% extends 'layouts/base.html' %}
-{% load static %}
 {% load i18n %}
+{% load static %}
 
-{% block title %} Blank Page {% endblock title %}
+
+{% block title %} New computer {% endblock title %}
 {% block bodyclass %} hold-transition sidebar-mini {% endblock bodyclass %}
 {% block content %}
   <!-- Content Wrapper. Contains page content -->
