--- a/home/templates/home/forms/step2.html
+++ b/home/templates/home/forms/step2.html
@@ -127,7 +127,7 @@
                     type="text"
                     class="form-control"
                     placeholder="Enter computer serial number"
-                    name="{{ wizard.form.computer_series.serial_number }}"
+                    name="{{ wizard.form.computer_series.name }}"
                     
                     id="{{ wizard.form.computer_series.id_for_label }}"
                 >
@@ -140,8 +140,10 @@
     <div class="row user-row" data-user-id="{{ user.pk }}">
         <div class="col-sm-2">
             <div class="form-group track-changes">
-                <label>User type</label>
-                <input list="userList_{{ user.pk }}" id="usersInput_{{ user.pk }}" name="user_type_{{ user.pk }}" class="form-control" placeholder="User type" style="width: 100%" onblur="addNew()" onkeypress="handleKeyPress(event)">
+                <label for="{{ wizard.form.user_type.id_for_label }}" class="form-label">
+                    {{ wizard.form.user_type.label_tag }}
+                </label>                
+                <input list="userList_{{ user.pk }}" id="{{ wizard.form.user_type.id_for_label }}" name="{{ wizard.form.user_type.name }}" class="form-control" placeholder="User type" style="width: 100%" onblur="addNew()" onkeypress="handleKeyPress(event)">
                 <datalist id="userList_{{ user.pk }}">
                     {% for choice in wizard.form.fields.user_type.choices %}
                     <option value="{{ choice.1 }}">
@@ -151,16 +153,34 @@
         </div>
         <div class="col-sm-4" >
             <div class="form-group track-changes">
-                <label>User name</label>
-                <input type="text" class="form-control" name="user_name_{{ user.pk }}" placeholder="User name" >
+                <label for="{{ wizard.form.user_name.id_for_label }}" class="form-label">
+                    {{ wizard.form.user_name.label_tag }}
+                </label>
+                <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Enter computer serial number"
+                    name="{{ wizard.form.user_name.name }}"
+                    
+                    id="{{ wizard.form.user_name.id_for_label }}"
+                >
             </div>
         </div>
         <div class="col-sm-6">
             <div class="row">
                 <div class="col-sm-10">
                     <div class="form-group track-changes">
-                        <label>User password</label>
-                        <input type="text" class="form-control" name="password_{{ user.pk }}" placeholder="User password" >
+                        <label for="{{ wizard.form.user_password.id_for_label }}" class="form-label">
+                            {{ wizard.form.user_password.label_tag }}
+                        </label>
+                        <input
+                            type="text"
+                            class="form-control"
+                            placeholder="Enter computer serial number"
+                            name="{{ wizard.form.user_password.name }}"
+                            
+                            id="{{ wizard.form.user_password.id_for_label }}"
+                        >
                     </div>
                 </div>
                 <div class="col-sm-1 text-right" style="display: flex; align-items: center;">
@@ -183,7 +203,7 @@
         <textarea
             class="form-control"
             placeholder="Enter a comment"
-            name="{{ wizard.form.computer_comment.addComment }}"
+            name="{{ wizard.form.computer_comment.name }}"
             id="{{ wizard.form.computer_comment.id_for_label }}"
         ></textarea>
         
