--- a/home/templates/home/computer_wizard_form.html
+++ b/home/templates/home/computer_wizard_form.html
@@ -60,15 +60,11 @@
             <div class="mt-3 col-md-12">
 
               <div class="form-navigation">
-                  {% if wizard.steps.prev %}
-                      <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}" class="btn btn-outline-secondary">{% trans "Back" %}</button>
-                  {% endif %}
-                  {% if wizard.steps.next %}
-                      <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.next }}" class="btn btn-outline-primary">{% trans "Next" %}</button>
-                  {% endif %}
-                  {% if wizard.steps.current == wizard.steps.last %}
-                      <button type="submit" class="btn btn-success">{% trans "Submit" %}</button>
-                  {% endif %}
+                {% if wizard.steps.prev %}
+                <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.first }}">{% trans "first step" %}</button>
+                <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}">{% trans "prev step" %}</button>
+                {% endif %}
+                <input type="submit" value="{% trans "submit" %}"/>
               </div>
           </form>
         </div>
