--- a/home/templates/home/forms/step1.html
+++ b/home/templates/home/forms/step1.html
@@ -4,13 +4,13 @@
         <label for="{{ wizard.form.customer_name.id_for_label }}" class="form-label">
             {{ wizard.form.customer_name.label_tag }}
         </label>
-        <input list="customerList" id="{{ wizard.form.customer_name.id_for_label }}" name="{{ wizard.form.customer_name.name }}" class="form-control"  placeholder="Select or enter customer name" style="width: 100%">
+        <input list="customerList" id="{{ wizard.form.customer_name.id_for_label }}" name="{{ wizard.form.customer_name.html_name }}" class="form-control"  placeholder="Select or enter customer name" style="width: 100%">
         <datalist id="customerList">
             {% for customer in customer_queryset %}
             <option value="{{ customer.name }}">
             {% endfor %}
         </datalist>
-        {{ form.customer_name.errors }}
+        {{ wizard.form.customer_name.errors }}
 </div>
 
 <div class="form-group">
@@ -21,10 +21,11 @@
         type="text"
         class="form-control"
         placeholder="Enter placement"
-        name="{{ wizard.form.location_name.name }}"
+        name="{{ wizard.form.location_name.html_name }}"
         
         id="{{ wizard.form.location_name.id_for_label }}"
     >
+    {{ wizard.form.location_name.errors }}
 </div>
 
 
@@ -32,7 +33,7 @@
     <label for="{{ wizard.form.computer_type.id_for_label }}" class="form-label">
         {{ wizard.form.computer_type.label_tag }}
     </label>
-    <input list="computerTypeList" id="{{ wizard.form.computer_type.id_for_label }}" name="{{ wizard.form.computer_type.name }}" class="form-control"
+    <input list="computerTypeList" id="{{ wizard.form.computer_type.id_for_label }}" name="{{ wizard.form.computer_type.html_name }}" class="form-control"
            placeholder="Select or enter computer type"
            >
     <datalist id="computerTypeList">
@@ -40,5 +41,6 @@
             <option value="{{ choice.0 }}">{{ choice.1 }}</option>
         {% endfor %}
     </datalist>
+    {{ wizard.form.computer_type.errors }}
 </div>
 
