--- a/home/templates/home/computer_wizard_form.html
+++ b/home/templates/home/computer_wizard_form.html
@@ -61,10 +61,10 @@
 
               <div class="form-navigation">
                 {% if wizard.steps.prev %}
-                <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.first }}">{% trans "first step" %}</button>
-                <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}">{% trans "prev step" %}</button>
+                <button name="wizard_goto_step" type="submit" class="btn btn-outline-secondary btn-sm" value="{{ wizard.steps.first }}">{% trans "first step" %}</button>
+                <button name="wizard_goto_step" type="submit" class="btn btn-outline-secondary btn-sm" value="{{ wizard.steps.prev }}">{% trans "prev step" %}</button>
                 {% endif %}
-                <input type="submit" value="{% trans "submit" %}"/>
+                <input type="submit" class="btn btn-primary btn-sm" value="{% trans "submit" %}"/>
               </div>
           </form>
         </div>
